fix scrollbar

--- a/src/components/noteList/_noteList.scss
+++ b/src/components/noteList/_noteList.scss
@@ -7,7 +7,8 @@
 
 .noteList_wrap {
   height: 100%;
-  display: flex;
+  padding-bottom: 5px;
+    display: flex;
   flex-direction: column;
   align-items: center;
   overflow-y: scroll;
@@ -17,7 +18,7 @@
     align-items: center;
     width: 96vw;
     height: 75px;
-    margin-top: 2px;
+    margin-top: 5px;
     padding: 13px 15px;
     background-color: $baseColor;
     cursor: pointer;
@@ -44,14 +45,19 @@
   }
 
   &::-webkit-scrollbar {
-    width: 7px;
+    width: 8px;
   }
   &::-webkit-scrollbar-track {
-    background-color: darkgrey;
-    border-radius: 10px;
-    height: 400px;
+    margin: 5px 0;
+    background-color: $scrollBar;
+    border-radius: 4px;
   }
-  &:-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  &::-webkit-scrollbar-thumb {
+    background-color: $navBarColor;
+    height: 100px;
+    border-radius: 4px;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: $baseColor;
   }
 }
