--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -13,4 +13,5 @@
 }
 .app_bottom {
   grid-area: bottomSpace;
+  overflow: hidden;
 }
