--- a/src/scss/main/main.css
+++ b/src/scss/main/main.css
@@ -116,6 +116,7 @@ select {
 
 .noteList_wrap {
   height: 100%;
+  padding-bottom: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -126,7 +127,7 @@ select {
   align-items: center;
   width: 96vw;
   height: 75px;
-  margin-top: 2px;
+  margin-top: 5px;
   padding: 13px 15px;
   background-color: rgb(231, 231, 231);
   cursor: pointer;
@@ -156,15 +157,20 @@ select {
   text-overflow: ellipsis;
 }
 .noteList_wrap::-webkit-scrollbar {
-  width: 7px;
+  width: 8px;
 }
 .noteList_wrap::-webkit-scrollbar-track {
-  background-color: darkgrey;
-  border-radius: 10px;
-  height: 400px;
+  margin: 5px 0;
+  background-color: darkgray;
+  border-radius: 4px;
 }
-.noteList_wrap:-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+.noteList_wrap::-webkit-scrollbar-thumb {
+  background-color: rgb(212, 212, 212);
+  height: 100px;
+  border-radius: 4px;
+}
+.noteList_wrap::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(231, 231, 231);
 }
 
 .app_wrap {
@@ -181,6 +187,7 @@ select {
 
 .app_bottom {
   grid-area: bottomSpace;
+  overflow: hidden;
 }
 
 .workSpace_wrap {
